--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@heroicons/react": "^2.2.0",
+    "@maptiler/sdk": "^3.1.1",
     "@reduxjs/toolkit": "^2.7.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "appwrite": "^17.0.2",
     "axios": "^1.8.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.501.0",
+    "mapbox-gl": "^3.11.0",
+    "maplibre-gl": "^5.3.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "remove-markdown": "^0.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
